refactor: apply OpenRewrite UpgradeToJava21 recipe
Automated migration using org.openrewrite.java.migrate.UpgradeToJava21:
- Pattern matching for instanceof (Java 16) — 76 occurrences
- @Serial annotations (Java 14) — 90 additions
- .get(0) → .getFirst() (Java 21) — 512 occurrences
- Paths.get() → Path.of() (Java 11) — 37 occurrences
- Text blocks (Java 15) — 9 files
- Switch expressions (Java 14) — ~7 files
- jakarta.annotation-api scope set to provided

Modules: api (251 files), web (15 files), liquibase (6 files)
Total: 273 files changed, ~1513 insertions, ~1309 deletions

Also updated rewrite-maven-plugin 6.6.3 → 6.35.0 and
rewrite-migrate-java 3.12.0 → 3.31.3 (6.6.3 was not published).

Closes #21, closes #17, closes #20, closes #56, closes #58

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>