@@ -141,7 +141,7 @@ public class ExistingOrNewVisitAssignmentHandler extends ExistingVisitAssignment
 			throw new APIException("GlobalProperty.error.loadVisitType", new Object[] { encounterType.getName() });
 		}
 
-		return Context.getVisitService().getAllVisitTypes().get(0);
+		return Context.getVisitService().getAllVisitTypes().getFirst();
 	}
 
 	@Override
