@@ -208,7 +208,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 		assertNotNull(patientIdTypes);
 		PatientIdentifier patientIdentifier = new PatientIdentifier();
 		patientIdentifier.setIdentifier("123-0");
-		patientIdentifier.setIdentifierType(patientIdTypes.get(0));
+		patientIdentifier.setIdentifierType(patientIdTypes.getFirst());
 		patientIdentifier.setLocation(new Location(1));
 		patientIdentifier.setPreferred(true);
 		Set<PatientIdentifier> patientIdentifiers = new TreeSet<>();
@@ -332,7 +332,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 		// Verify # of results and which results we have received
 		assertEquals(5, res.size());
 		for (Relationship rr : res) {
-			if (!rr.equals(rels.get(0)) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
+			if (!rr.equals(rels.getFirst()) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
 			        && !rr.equals(rels.get(8))) {
 				if (rr.equals(rels.get(1))) {
 					fail(
@@ -1044,7 +1044,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 		// Verify # of results and which results we have received
 		assertEquals(5, res.size());
 		for (Relationship rr : res) {
-			if (!rr.equals(rels.get(0)) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
+			if (!rr.equals(rels.getFirst()) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
 			        && !rr.equals(rels.get(8))) {
 				if (rr.equals(rels.get(1))) {
 					fail(
@@ -1142,7 +1142,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 		// Verify # of results and which results we have received
 		assertEquals(5, res.size());
 		for (Relationship rr : res) {
-			if (!rr.equals(rels.get(0)) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
+			if (!rr.equals(rels.getFirst()) && !rr.equals(rels.get(2)) && !rr.equals(rels.get(3)) && !rr.equals(rels.get(7))
 			        && !rr.equals(rels.get(8))) {
 				if (rr.equals(rels.get(1))) {
 					fail(
@@ -1527,8 +1527,8 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 		Context.getPersonService().savePersonMergeLog(personMergeLog);
 		List<PersonMergeLog> result = Context.getPersonService().getAllPersonMergeLogs(true);
 		assertEquals(1, result.size(), "could not retrieve expected number of PersonMergeLog objects");
-		assertNotNull(result.get(0), "PersonMergeLog at index 0 is null");
-		assertNotNull(result.get(0).getPersonMergeLogData(), "PersonMergeLog data has not been deserialized");
+		assertNotNull(result.getFirst(), "PersonMergeLog at index 0 is null");
+		assertNotNull(result.getFirst().getPersonMergeLogData(), "PersonMergeLog data has not been deserialized");
 	}
 
 	/**
@@ -2379,7 +2379,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 
 		// This is a bug Trunk-5149
 		assertEquals(result.size(), 1);
-		assertNull(result.get(0));
+		assertNull(result.getFirst());
 	}
 
 	@Test
@@ -2393,7 +2393,7 @@ public class PersonServiceTest extends BaseContextSensitiveTest {
 
 		// This is probably a bug TRUNK-5148
 		assertEquals(result.size(), 1);
-		assertNull(result.get(0));
+		assertNull(result.getFirst());
 	}
 
 	@Test
