@@ -139,7 +139,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		assertEquals(1, actualSize);
 
 		//if actually the search returned the matching patient
-		Patient actualPatient = dao.getPatients("*567", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("*567", 0, null).getFirst();
 
 		assertEquals(patient2, actualPatient);
 	}
@@ -171,7 +171,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		assertEquals(1, actualSize);
 
 		//if actually the search returned the matching patient
-		Patient actualPatient = dao.getPatients("%567", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("%567", 0, null).getFirst();
 
 		assertEquals(patient2, actualPatient);
 	}
@@ -205,7 +205,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		assertEquals(1, actualSize);
 
 		//if actually the search returned the matching patient
-		Patient actualPatient = dao.getPatients("_567", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("_567", 0, null).getFirst();
 
 		assertEquals(patient2, actualPatient);
 	}
@@ -234,7 +234,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		int actualSize = dao.getPatients("%ca", 0, null).size();
 		assertEquals(1, actualSize);
 
-		Patient actualPatient = dao.getPatients("%ca", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("%ca", 0, null).getFirst();
 		//if actually the search returned the matching patient
 		assertEquals(patient2, actualPatient);
 	}
@@ -264,7 +264,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		assertEquals(1, actualSize);
 
 		//if actually the search returned the matching patient
-		Patient actualPatient = dao.getPatients("_ca", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("_ca", 0, null).getFirst();
 		assertEquals(patient2, actualPatient);
 
 	}
@@ -294,7 +294,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		assertEquals(1, actualSize);
 
 		//if actually the search returned the matching patient
-		Patient actualPatient = dao.getPatients("*ca", 0, null).get(0);
+		Patient actualPatient = dao.getPatients("*ca", 0, null).getFirst();
 		assertEquals(patient2, actualPatient);
 	}
 
@@ -338,7 +338,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<PatientIdentifier> patientIdentifiers = dao.getPatientIdentifiers(null, new ArrayList<>(),
 		    Collections.singletonList(location), new ArrayList<>(), null);
 		assertEquals(1, patientIdentifiers.size());
-		assertEquals("12345K", patientIdentifiers.get(0).getIdentifier());
+		assertEquals("12345K", patientIdentifiers.getFirst().getIdentifier());
 	}
 
 	/**
@@ -387,7 +387,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		    new ArrayList<>(), new ArrayList<>(), null);
 
 		assertEquals(1, patientIdentifiers.size());
-		assertEquals(identifier, patientIdentifiers.get(0).getIdentifier());
+		assertEquals(identifier, patientIdentifiers.getFirst().getIdentifier());
 	}
 
 	/**
@@ -515,7 +515,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		    null, null);
 
 		assertEquals(patientIdentifierTypes.size(), 1);
-		assertEquals(oldIdNumberNonRetired, patientIdentifierTypes.get(0));
+		assertEquals(oldIdNumberNonRetired, patientIdentifierTypes.getFirst());
 	}
 
 	/**
@@ -530,7 +530,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<PatientIdentifierType> patientIdentifierTypes = dao.getPatientIdentifierTypes(null, "1", null, null);
 
 		assertEquals(patientIdentifierTypes.size(), 1);
-		assertEquals(formatOneNonRetired, patientIdentifierTypes.get(0));
+		assertEquals(formatOneNonRetired, patientIdentifierTypes.getFirst());
 	}
 
 	/**
@@ -563,7 +563,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<PatientIdentifierType> patientIdentifierTypes = dao.getPatientIdentifierTypes(null, null, true, null);
 
 		assertEquals(patientIdentifierTypes.size(), 1);
-		assertEquals(nonRetiredRequired, patientIdentifierTypes.get(0));
+		assertEquals(nonRetiredRequired, patientIdentifierTypes.getFirst());
 	}
 
 	/**
@@ -674,7 +674,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Hornblower3", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 		patient.setVoided(true);
 		for (PersonName name : patient.getNames()) {
 			name.setVoided(true);
@@ -695,7 +695,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Oloo", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 
 		Set<PersonName> names = patient.getNames();
 
@@ -719,7 +719,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Hornblower3", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 		patient.setVoided(true);
 		for (PersonName name : patient.getNames()) {
 			name.setVoided(true);
@@ -741,7 +741,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Oloo", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 
 		Set<PersonName> names = patient.getNames();
 
@@ -762,7 +762,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Oloo", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 
 		Set<PersonName> names = patient.getNames();
 
@@ -780,7 +780,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Oloo", 0, 11);
 		assertEquals(1, patients.size());
 
-		Patient patient = patients.get(0);
+		Patient patient = patients.getFirst();
 
 		Set<PersonName> names = patient.getNames();
 
@@ -802,7 +802,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -814,7 +814,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("B.", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -826,9 +826,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Baggins", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 	}
 
 	/**
@@ -840,7 +840,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Senior", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -852,7 +852,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon B. Baggins Senior", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -930,9 +930,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("al", 0, 11);
 
 		assertEquals(3, patients.size());
-		assertEquals("al", patients.get(0).getGivenName());
+		assertEquals("al", patients.getFirst().getGivenName());
 		assertEquals("al", patients.get(1).getGivenName());
-		assertFalse(patients.get(0).getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
+		assertFalse(patients.getFirst().getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
 	}
 
 	/**
@@ -944,7 +944,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("ec", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("ec", patients.get(0).getMiddleName());
+		assertEquals("ec", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -956,9 +956,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("ki", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("ki", patients.get(0).getFamilyName());
+		assertEquals("ki", patients.getFirst().getFamilyName());
 		assertEquals("ki", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
+		assertFalse(patients.getFirst().getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
 	}
 
 	/**
@@ -970,7 +970,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("os", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("br", patients.get(0).getGivenName());
+		assertEquals("br", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -982,7 +982,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("br fo ki os", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("fo", patients.get(0).getMiddleName());
+		assertEquals("fo", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -994,7 +994,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("al mi", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("ec", patients.get(0).getMiddleName());
+		assertEquals("ec", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -1054,9 +1054,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bagg", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_SEARCH_MATCH_MODE,
@@ -1079,9 +1079,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("aggins", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_SEARCH_MATCH_MODE,
@@ -1142,7 +1142,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("42-42-42", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1197,7 +1197,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1209,7 +1209,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("42-42-42", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1221,7 +1221,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon B.", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1250,7 +1250,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1261,7 +1261,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("B.", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1272,9 +1272,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Baggins", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 	}
 
 	/**
@@ -1285,7 +1285,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Junior", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Frodo Ansilon", patients.get(0).getGivenName());
+		assertEquals("Frodo Ansilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1296,7 +1296,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bilbo Odilon B. Baggins Senior", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1343,9 +1343,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("al", 0, 11);
 
 		assertEquals(3, patients.size());
-		assertEquals("al", patients.get(0).getGivenName());
+		assertEquals("al", patients.getFirst().getGivenName());
 		assertEquals("al", patients.get(1).getGivenName());
-		assertFalse(patients.get(0).getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
+		assertFalse(patients.getFirst().getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
 	}
 
 	/**
@@ -1356,7 +1356,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("ec", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("ec", patients.get(0).getMiddleName());
+		assertEquals("ec", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -1367,9 +1367,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("ki", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("ki", patients.get(0).getFamilyName());
+		assertEquals("ki", patients.getFirst().getFamilyName());
 		assertEquals("ki", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
+		assertFalse(patients.getFirst().getMiddleName().equalsIgnoreCase(patients.get(1).getMiddleName()));
 	}
 
 	/**
@@ -1380,7 +1380,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("os", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("br", patients.get(0).getGivenName());
+		assertEquals("br", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1391,7 +1391,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("br fo ki os", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("fo", patients.get(0).getMiddleName());
+		assertEquals("fo", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -1402,7 +1402,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("al mi", 0, 11);
 
 		assertEquals(1, patients.size());
-		assertEquals("ec", patients.get(0).getMiddleName());
+		assertEquals("ec", patients.getFirst().getMiddleName());
 	}
 
 	/**
@@ -1451,7 +1451,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 	public void getPatients_shouldGetPatientByIdentifier_SignatureNo2() {
 		List<Patient> patients = dao.getPatients("42-42-42", 0, 11);
 		assertEquals(1, patients.size());
-		assertEquals("Bilbo Odilon", patients.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", patients.getFirst().getGivenName());
 	}
 
 	/**
@@ -1550,9 +1550,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Senior ring bearer", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 	}
 
 	/**
@@ -1709,11 +1709,11 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		updateSearchIndex();
 
 		List<Patient> patients = dao.getPatients("alpha", 0, null);
-		assertEquals(patient, patients.get(0));
+		assertEquals(patient, patients.getFirst());
 		assertEquals(3, patients.size());
 
 		List<Patient> first_patient = dao.getPatients("alpha", 0, 1);
-		assertEquals(patient, first_patient.get(0));
+		assertEquals(patient, first_patient.getFirst());
 		assertEquals(1, first_patient.size());
 
 		List<Patient> two_patients_only = dao.getPatients("alpha", 0, 2);
@@ -1738,11 +1738,11 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		updateSearchIndex();
 
 		List<Patient> patients = dao.getPatients("Senior", 0, null);
-		assertEquals(patient, patients.get(0));
+		assertEquals(patient, patients.getFirst());
 		assertEquals(3, patients.size());
 
 		List<Patient> first_patient = dao.getPatients("Senior", 0, 1);
-		assertEquals(patient, first_patient.get(0));
+		assertEquals(patient, first_patient.getFirst());
 		assertEquals(1, first_patient.size());
 
 		List<Patient> two_patients_only = dao.getPatients("Senior", 0, 2);
@@ -1787,9 +1787,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Bagg", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_SEARCH_MATCH_MODE,
@@ -1811,9 +1811,9 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("aggins", 0, 11);
 
 		assertEquals(2, patients.size());
-		assertEquals("Baggins", patients.get(0).getFamilyName());
+		assertEquals("Baggins", patients.getFirst().getFamilyName());
 		assertEquals("Baggins", patients.get(1).getFamilyName());
-		assertFalse(patients.get(0).getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
+		assertFalse(patients.getFirst().getGivenName().equalsIgnoreCase(patients.get(1).getGivenName()));
 
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_SEARCH_MATCH_MODE,
@@ -2026,7 +2026,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		List<Patient> patients = dao.getPatients("Ben", 0, 11);
 
 		assertEquals(4, patients.size());
-		assertEquals("Ben", patients.get(0).getGivenName());
+		assertEquals("Ben", patients.getFirst().getGivenName());
 		assertEquals("Alan", patients.get(1).getGivenName());
 		assertEquals("Benedict", patients.get(2).getGivenName());
 		assertEquals("Adam", patients.get(3).getGivenName());
@@ -2034,7 +2034,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		patients = dao.getPatients("Ben Frank", 0, 11);
 
 		assertEquals(4, patients.size());
-		assertEquals("Ben", patients.get(0).getGivenName());
+		assertEquals("Ben", patients.getFirst().getGivenName());
 		assertEquals("Alan", patients.get(1).getGivenName());
 		assertEquals("Benedict", patients.get(2).getGivenName());
 		assertEquals("Adam", patients.get(3).getGivenName());
@@ -2216,7 +2216,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 
 		List<Patient> patients = dao.getPatients("42-42", false, 0, null);
 		assertEquals(1, patients.size());
-		assertEquals("42-42-42", patients.get(0).getPatientIdentifier().toString());
+		assertEquals("42-42-42", patients.getFirst().getPatientIdentifier().toString());
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(
 			    OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_IDENTIFIER_SEARCH_MATCH_MODE, oldPropertyValue);
@@ -2253,7 +2253,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 
 		List<Patient> patients = dao.getPatients("voided", true, 0, 11);
 		assertEquals(3, patients.size());
-		assertEquals(42, (int) patients.get(0).getPersonId());
+		assertEquals(42, (int) patients.getFirst().getPersonId());
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(
 			    OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_IDENTIFIER_SEARCH_MATCH_MODE, oldPropertyValue);
@@ -2278,7 +2278,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		//Check for partial identifier match
 		List<Patient> patients = dao.getPatients("OM", false, 0, null);
 		assertEquals(1, patients.size());
-		assertEquals("OM292", patients.get(0).getPatientIdentifier(5).toString());
+		assertEquals("OM292", patients.getFirst().getPatientIdentifier(5).toString());
 
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(
@@ -2369,7 +2369,7 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		//Check for partial identifier match
 		List<Patient> patients = dao.getPatients("BAH5", false, 0, null);
 		assertEquals(1, patients.size());
-		assertEquals("BAH509", patients.get(0).getPatientIdentifier(5).toString());
+		assertEquals("BAH509", patients.getFirst().getPatientIdentifier(5).toString());
 		if (oldPropertyValue != null) {
 			globalPropertiesTestHelper.setGlobalProperty(
 			    OpenmrsConstants.GLOBAL_PROPERTY_PATIENT_IDENTIFIER_SEARCH_MATCH_MODE, oldPropertyValue);
@@ -2392,8 +2392,8 @@ public class PatientDAOTest extends BaseContextSensitiveTest {
 		updateSearchIndex();
 		List<Patient> patients = dao.getPatients("292", false, 0, null);
 		assertEquals(1, patients.size());
-		assertEquals("OM292", patients.get(0).getPatientIdentifier(5).toString());
-		Patient actualPatient = patients.get(0);
+		assertEquals("OM292", patients.getFirst().getPatientIdentifier(5).toString());
+		Patient actualPatient = patients.getFirst();
 		assertEquals(patient, actualPatient);
 
 		if (oldPropertyValue != null) {
