@@ -192,7 +192,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Bilbo Odilon", people.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -208,7 +208,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Bilbo Odilon", people.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -226,7 +226,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Bilbo Odilon", people.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -242,9 +242,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 
 		assertEquals(2, people.size());
 
-		assertEquals("Baggins", people.get(0).getFamilyName());
+		assertEquals("Baggins", people.getFirst().getFamilyName());
 		assertEquals("Baggins", people.get(1).getFamilyName());
-		assertFalse(people.get(0).getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
+		assertFalse(people.getFirst().getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
 	}
 
 	/**
@@ -261,9 +261,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 
 		assertEquals(2, people.size());
 
-		assertEquals("Baggins", people.get(0).getFamilyName());
+		assertEquals("Baggins", people.getFirst().getFamilyName());
 		assertEquals("Baggins", people.get(1).getFamilyName());
-		assertFalse(people.get(0).getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
+		assertFalse(people.getFirst().getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
 	}
 
 	/**
@@ -286,7 +286,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Bilbo Odilon", people.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -298,7 +298,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Frodo Ansilon", people.get(0).getGivenName());
+		assertEquals("Frodo Ansilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -311,9 +311,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 
 		assertEquals(2, people.size());
 
-		assertEquals("Baggins", people.get(0).getFamilyName());
+		assertEquals("Baggins", people.getFirst().getFamilyName());
 		assertEquals("Baggins", people.get(1).getFamilyName());
-		assertFalse(people.get(0).getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
+		assertFalse(people.getFirst().getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
 	}
 
 	/**
@@ -326,9 +326,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 
 		assertEquals(2, people.size());
 
-		assertEquals("Baggins", people.get(0).getFamilyName());
+		assertEquals("Baggins", people.getFirst().getFamilyName());
 		assertEquals("Baggins", people.get(1).getFamilyName());
-		assertFalse(people.get(0).getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
+		assertFalse(people.getFirst().getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
 	}
 
 	/**
@@ -378,7 +378,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Bilbo Odilon", people.get(0).getGivenName());
+		assertEquals("Bilbo Odilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -391,7 +391,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("Frodo Ansilon", people.get(0).getGivenName());
+		assertEquals("Frodo Ansilon", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -405,9 +405,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("Baggins", people.get(0).getFamilyName());
+		assertEquals("Baggins", people.getFirst().getFamilyName());
 		assertEquals("Baggins", people.get(1).getFamilyName());
-		assertFalse(people.get(0).getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
+		assertFalse(people.getFirst().getGivenName().equalsIgnoreCase(people.get(1).getGivenName()));
 	}
 
 	/**
@@ -419,7 +419,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("bravo", people.get(0).getGivenName());
+		assertEquals("bravo", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -431,9 +431,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("alpha", people.get(0).getGivenName());
+		assertEquals("alpha", people.getFirst().getGivenName());
 		assertEquals("alpha", people.get(1).getGivenName());
-		assertTrue(people.get(0).getMiddleName() != people.get(1).getMiddleName());
+		assertTrue(people.getFirst().getMiddleName() != people.get(1).getMiddleName());
 	}
 
 	/**
@@ -445,7 +445,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("echo", people.get(0).getMiddleName());
+		assertEquals("echo", people.getFirst().getMiddleName());
 	}
 
 	/**
@@ -457,9 +457,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("foxtrot", people.get(0).getMiddleName());
+		assertEquals("foxtrot", people.getFirst().getMiddleName());
 		assertEquals("foxtrot", people.get(1).getMiddleName());
-		assertTrue(people.get(0).getFamilyName() != people.get(1).getFamilyName());
+		assertTrue(people.getFirst().getFamilyName() != people.get(1).getFamilyName());
 	}
 
 	/**
@@ -471,7 +471,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("lima", people.get(0).getFamilyName());
+		assertEquals("lima", people.getFirst().getFamilyName());
 	}
 
 	/**
@@ -483,9 +483,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("kilo", people.get(0).getFamilyName());
+		assertEquals("kilo", people.getFirst().getFamilyName());
 		assertEquals("kilo", people.get(1).getFamilyName());
-		assertTrue(people.get(0).getGivenName() != people.get(1).getGivenName());
+		assertTrue(people.getFirst().getGivenName() != people.get(1).getGivenName());
 	}
 
 	/**
@@ -497,7 +497,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("alpha", people.get(0).getGivenName());
+		assertEquals("alpha", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -509,9 +509,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("papa", people.get(0).getPersonName().getFamilyName2());
+		assertEquals("papa", people.getFirst().getPersonName().getFamilyName2());
 		assertEquals("papa", people.get(1).getPersonName().getFamilyName2());
-		assertTrue(people.get(0).getFamilyName() != people.get(1).getFamilyName());
+		assertTrue(people.getFirst().getFamilyName() != people.get(1).getFamilyName());
 	}
 
 	/**
@@ -523,7 +523,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("alpha", people.get(0).getGivenName());
+		assertEquals("alpha", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -590,7 +590,7 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(1, people.size());
-		assertEquals("dead-charlie", people.get(0).getGivenName());
+		assertEquals("dead-charlie", people.getFirst().getGivenName());
 	}
 
 	/**
@@ -602,9 +602,9 @@ public class HibernatePersonDAOTest extends BaseContextSensitiveTest {
 		logPeople(people);
 
 		assertEquals(2, people.size());
-		assertEquals("dead-papa", people.get(0).getPersonName().getFamilyName2());
+		assertEquals("dead-papa", people.getFirst().getPersonName().getFamilyName2());
 		assertEquals("dead-papa", people.get(1).getPersonName().getFamilyName2());
-		assertTrue(people.get(0).getFamilyName() != people.get(1).getFamilyName());
+		assertTrue(people.getFirst().getFamilyName() != people.get(1).getFamilyName());
 	}
 
 	/**
