@@ -242,7 +242,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		List<Obs> obsForPatient = Context.getObsService().getObservationsByPersonAndConcept(patient, question);
 		assertEquals(1, obsForPatient.size()); // there should be 1 obs now for
 		// this patient
-		assertEquals(3, obsForPatient.get(0).getEncounter().getId().intValue());
+		assertEquals(3, obsForPatient.getFirst().getEncounter().getId().intValue());
 
 	}
 
@@ -330,7 +330,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		// check for the proposed concept
 		List<ConceptProposal> proposedConcepts = conceptService.getConceptProposals("SEVERO DOLOR DE CABEZA");
 		assertEquals(1, proposedConcepts.size(), "There should be a proposed concept by this name");
-		assertEquals(encService.getEncountersByPatient(patient).get(0), proposedConcepts.get(0).getEncounter());
+		assertEquals(encService.getEncountersByPatient(patient).getFirst(), proposedConcepts.getFirst().getEncounter());
 	}
 
 	/**
@@ -358,7 +358,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 
 		List<Obs> obss = obsService.getObservationsByPersonAndConcept(patient, concept);
 
-		ConceptName name = obss.get(0).getValueCodedName();
+		ConceptName name = obss.getFirst().getValueCodedName();
 		assertNotNull(name);
 		assertEquals(2471, name.getId().intValue(), "The valueCodedName should be 2471");
 	}
@@ -904,7 +904,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		encForPatient2.removeAll(encForPatient1);//retain only the new encounter
 		assertThat(encForPatient2, hasSize(1));
 
-		Provider newProvider = encForPatient2.get(0)
+		Provider newProvider = encForPatient2.getFirst()
 		        .getProvidersByRole(
 		            Context.getEncounterService().getEncounterRoleByUuid(EncounterRole.UNKNOWN_ENCOUNTER_ROLE_UUID))
 		        .iterator().next();
@@ -933,7 +933,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		encForPatient2.removeAll(encForPatient1);
 		assertThat(encForPatient2, hasSize(1));
 
-		Provider newProvider = encForPatient2.get(0)
+		Provider newProvider = encForPatient2.getFirst()
 		        .getProvidersByRole(
 		            Context.getEncounterService().getEncounterRoleByUuid(EncounterRole.UNKNOWN_ENCOUNTER_ROLE_UUID))
 		        .iterator().next();
@@ -962,7 +962,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		encForPatient2.removeAll(encForPatient1);
 		assertThat(encForPatient2, hasSize(1));
 
-		Provider newProvider = encForPatient2.get(0)
+		Provider newProvider = encForPatient2.getFirst()
 		        .getProvidersByRole(
 		            Context.getEncounterService().getEncounterRoleByUuid(EncounterRole.UNKNOWN_ENCOUNTER_ROLE_UUID))
 		        .iterator().next();
@@ -995,7 +995,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		encForPatient2.removeAll(encForPatient1);
 		assertThat(encForPatient2, hasSize(1));
 
-		Provider newProvider = encForPatient2.get(0)
+		Provider newProvider = encForPatient2.getFirst()
 		        .getProvidersByRole(
 		            Context.getEncounterService().getEncounterRoleByUuid(EncounterRole.UNKNOWN_ENCOUNTER_ROLE_UUID))
 		        .iterator().next();
@@ -1043,7 +1043,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		assertEquals(originalEncounters + 1, encounters.size());
 
 		// get last encounter
-		Encounter enc = encounters.get(encounters.size() - 1);
+		Encounter enc = encounters.getLast();
 
 		// check the form uuid
 		Form form = enc.getForm();
@@ -1075,7 +1075,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		assertEquals(originalEncounters + 1, encounters.size());
 
 		// get last encounter
-		Encounter enc = encounters.get(encounters.size() - 1);
+		Encounter enc = encounters.getLast();
 
 		// check the form uuid
 		Form form = enc.getForm();
@@ -1107,7 +1107,7 @@ public class ORUR01HandlerTest extends BaseContextSensitiveTest {
 		assertEquals(originalEncounters + 1, encounters.size());
 
 		// get last encounter
-		Encounter enc = encounters.get(encounters.size() - 1);
+		Encounter enc = encounters.getLast();
 
 		// check the form id
 		Form form = enc.getForm();
