@@ -756,7 +756,7 @@ public class ObsValidatorTest extends BaseContextSensitiveTest {
 
 		assertTrue(errors.hasErrors());
 		assertTrue(errors.hasFieldErrors("valueNumeric"));
-		assertEquals("error.value.outOfRange.high", errors.getAllErrors().get(0).getCode());
+		assertEquals("error.value.outOfRange.high", errors.getAllErrors().getFirst().getCode());
 	}
 
 	/**
@@ -781,7 +781,7 @@ public class ObsValidatorTest extends BaseContextSensitiveTest {
 
 		assertTrue(errors.hasErrors());
 		assertTrue(errors.hasFieldErrors("valueNumeric"));
-		assertEquals("error.value.outOfRange.high", errors.getAllErrors().get(0).getCode());
+		assertEquals("error.value.outOfRange.high", errors.getAllErrors().getFirst().getCode());
 	}
 
 	/**
